new sls engine mount config

--- a/GameData/RocketMotorMenagerie/Parts/rmm_arsia.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_arsia.cfg
@@ -32,7 +32,7 @@ PART
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Arsia' is really, really, REALLY big. After all, its got a 1:800 expansion ratio. Derived from the 'Cotopaxi', it was built for use on Duna Transfer Vehicles to for the Duna Transfer Injection burn.
 
-    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 650 tmi
+    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 650 tmi
 
     mass = 1.8
 
