--- a/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
@@ -31,9 +31,9 @@ PART
     subcategory  = 0
     title        = RM-25-150 'Ceraunius' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = Derived from the 'Cotopaxi', the 'Ceraunius' was developed for an allegedly rushed upper stage engine. 'Ceraunius' is just that engine. It is based on the venerable 'Cotopaxi' but uses a nozzle with a 150:1 expansion area ratio. Due to some technical heritage from the 'Cotopaxi', it needs to be kept  cold if you want to restart it on-orbit, so it comes with an orbital variant painted white to reflect the heat. Also includes foil mounting options.  
+    description  = Derived from the 'Cotopaxi', the 'Ceraunius' was developed for an allegedly rushed upper stage engine. 'Ceraunius' is just that engine. It is based on the venerable 'Cotopaxi' but uses a nozzle with a 150:1 expansion area ratio. Due to some technical heritage from the 'Cotopaxi', it needs to be kept cold if to restart it on-orbit, so it comes with an orbital variant painted white to reflect the heat. Also includes foil mounting options.  
 
-    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 69
+    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 orbital 150
 
     mass = 1.4
 
@@ -390,20 +390,6 @@ PART
             node=sts
             node=bottom
             attachNode =  0.0, 0.263, 0.0, 0.0, 1.0, 0.0
-		}
-        SUBTYPE
-		{
-			name = SDLV Mount
-            primaryColor=#c7c7c7
-			secondaryColor=#b1773c
-            transform = 1875attach
-            transform = sls-mount
-            defaultSubtypePriority = 0
-            descriptionSummary = SDLV Engine Mount
-            descriptionDetail = Used for attaching engines to Inline Shuttle Derived Vehicles.
-            node=top01
-            node=bottom
-            attachNode =  0.0, 1.45, 0.0, 0.0, 1.0, 0.0
 		}
 	}
     MODULE
