--- a/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
@@ -34,7 +34,7 @@ PART
     manufacturer = Cassiopeia Propulsion Systems
     description  = Based on heritage technologies from the venerable 'Cotopaxi', this powerful sustainer engine is designed for low cost and high reliability when used on a wide variety of launch vehicles. Cassiopeia Propulsion Systems is certain it has a bright future with many decades of use as it propels space exploration to reach new achievements. Comes with nozzle variants for better performance as a booster, sustainer, or high altitude engine.
 
-    tags = propuls rocket sustain hydrogen hydrolox cryo rainier 122T stme nls? transportation als? rm? menagerie cassiopeia
+    tags = propuls rocket sustain hydrogen hydrolox cryo rainier 122T stme nls? transportation als? rm? menagerie cassiopeia flo sei comet
 
     mass = 2.45
 
