--- a/GameData/RocketMotorMenagerie/Parts/rmm_turiasaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_turiasaurus.cfg
@@ -32,7 +32,7 @@ PART
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Turiasaurus' is highly reliable, low cost booster engine that uses an innovative methalox split expander cycle. It is intended for use on reusable vehicles, but it's cheap enough that you can put it on an expendable vehicle as well.
 
-    tags = propuls rocket sustain methane methalox cryo als advanced rm? menagerie cassiopeia ?25 expander
+    tags = propuls rocket methane methalox cryo als advanced rm? menagerie cassiopeia ?25 expander stbe booster
 
     mass = 1
 
