--- a/RMM_Extras (No Warranty)/Vector_Scale_SSME/vector_scale_SSME.cfg
+++ b/RMM_Extras (No Warranty)/Vector_Scale_SSME/vector_scale_SSME.cfg
@@ -8,6 +8,7 @@
     @node_stack_top00[1,,] *= 0.7413388
     @node_stack_top01[1,,] *= 0.7413388
     @node_stack_sts[1,,] *= 0.7413388
+    @node_stack_sdlv[1,,] *= 0.7413388
     @node_stack_bottom[1,,] *= 0.7413388
 	@title = RM-25-69-V 'Cotopaxi' Cryogenic Rocket Engine
     @description = A 'Cotopaxi' scaled for use with the Shuttle Orbiter Construction Kit.
@@ -47,7 +48,7 @@
 		}
         @SUBTYPE[SDLV Mount]
 		{
-            @attachNode =  0.0, 1.0749, 0.0, 0.0, 1.0, 0.0
+            @attachNode =  0.0, 0.1668, 0.0, 0.0, 1.0, 0.0
 		}
 	}
 }
