--- a/GameData/RocketMotorMenagerie/Parts/rmm_ishtar.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_ishtar.cfg
@@ -32,7 +32,7 @@ PART
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Ishtar' is a modified 'Cotopaxi' with a two-position retractable nozzle. It has a fixed nozzle with a 1:50 expansion area ratio and the retractable portion increases that expansion to 1:150. This makes it a fairly wacky engine, best suited for SSTO vehicles. #CD7600> AUTHOR'S NOTE: The engine can be used with its two position nozzle either retracted for optimal sea level performance or deployed for optimal altitude or vacuum performance. This switch can be made in flight using the mode switch via the right click part action window or an action group.</color>
 
-    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 50 ssto 150 rlv reusable cass
+    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25  sts 50 ssto 150 rlv reusable cass
 
     mass = 1.43
 
