remove duplicate tech

--- a/RMM_Extras (No Warranty)/RS800K/rmm_wakulla.cfg
+++ b/RMM_Extras (No Warranty)/RS800K/rmm_wakulla.cfg
@@ -22,7 +22,7 @@ PART
     attachRules = 1,1,1,0,0
 
     TechRequired = veryHeavyRocketry
-    TechRequired = heavierRocketry
+    // TechRequired = heavierRocketry
     entryCost = 70000
     cost = 17500
 
