--- a/RMM_Extras (No Warranty)/Vector_Scale_SSME/vector_scale_SSME.cfg
+++ b/RMM_Extras (No Warranty)/Vector_Scale_SSME/vector_scale_SSME.cfg
@@ -34,19 +34,19 @@
 		{
             @attachNode =  0.0, 0.85254, 0.0, 0.0, 1.0, 0.0
 		}
-        @SUBTYPE[1.875m Mount]
+        @SUBTYPE[1.875m?Mount]
 		{
             @attachNode =  0.0, 1.0749, 0.0, 0.0, 1.0, 0.0
 		}
-        @SUBTYPE[2.5m Mountt]
+        @SUBTYPE[2.5m?Mount]
 		{
             @attachNode =  0.0, 1.0749, 0.0, 0.0, 1.0, 0.0
 		}
-        @SUBTYPE[STS Mount]
+        @SUBTYPE[STS?Mount]
 		{
             @attachNode =  0.0, 0.19497, 0.0, 0.0, 1.0, 0.0
 		}
-        @SUBTYPE[SDLV Mount]
+        @SUBTYPE[SDLV?Mount]
 		{
             @attachNode =  0.0, 0.1668, 0.0, 0.0, 1.0, 0.0
 		}
