RealName patch for most of the engines in RMM
Just a copy-paste of the BDB style RealNames with correct(ish) information.   some engines were left bare as the RMM wiki did not have data for them.

--- a/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
@@ -32,7 +32,10 @@ PART
     title        = RM-4LR-35 'Arenysaurus' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Arenysaurus' is what you need for boosters that need something even more powerful than the 'Kilimanjaro'. Utilizing methalox propellants and a 35:1 expansion nozzle, this engine is well-suited for liquid rocket boosters that need a great balance of high thrust and high ISP.
-
+	real_title = RS25-35CH4 LRBE Liquid Rocket Booster Engine
+	real_manufacturer = Rocketdyne
+	real_description = The LRBE is a SSME modified to operate with methane as the fuel and coolant. Since this concept is for a booster application, the 35:l expansion area ratio nozzle is incorporated into the design. This substantially improves thrust, both at sea level and in vacuum while specific impulse is lower than the SSME.
+	
     tags = propuls rocket booster methane methalox cryo rs25 ssme lrbe transportation rm? menagerie cassiopeia ?25 shuttle sts boldy LRB booster 35 lrbe cass
 
     mass = 1.05
