--- a/GameData/RocketMotorMenagerie/Parts/rmm_dugong.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_dugong.cfg
@@ -32,7 +32,10 @@ PART
     title        = RM-S6B-35 'Dugong' Liquid Fuel Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Dugong' is the result of modifying a 'Cotopaxi' to use Liquid Fuel and then sticking a 1:35 expansion nozzle on the flamey end. (Yeah, you read that right.) It can be used on liquid rocket boosters or on dual-mode SSTOs, where it can provide high thrust early in flight. It was hard to fit the new coolant and Liquid Fuel turbopumps onto the engine, so it can only gimble in one plane. Best used in clusters.
-
+	real_title = RS-25-35 RP-1 SSBE Space Shuttle Booster Engine
+	real_manufacturer = Rocketdyne
+	real_description = The SSBE is basically a re-designed RS25-35, with an all-new Power head, Fuel injector and bell.  The only parts in common with the standard RS-25-35 SSME-35 is the lower combustion chamber.  While only tenuously related the fact that the engines are broadly similar reduces training maintenance and tool costs.   This engine is meant for liquid boosters only and not meant to get to space.
+	
     tags = propuls rocket booster kerosene kerolox liquid fuel LF rs25 ssme transportation rm? menagerie cassiopeia cass ?1875 ?25 shuttle sts LRB booster 35 ssbe ssto
 
     mass = 1.14
