--- a/GameData/RocketMotorMenagerie/Parts/rmm_kilimanjaro.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_kilimanjaro.cfg
@@ -32,7 +32,10 @@ PART
     title        = RM-25-35 'Kilimanjaro' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = Based on the 'Cotopaxi', this has a nozzle with a 35:1 expansion area ratio. This modification produces an engine with improved performance and thrust at lower altitudes, making it well suited for booster applications.
-
+	real_title = RS-25-35 
+	real_manufacturer = Rocketdyne
+	real_description = The SSME-35 is a modified SSME with a change from a standard area ratio to an area ratio of 35:1. This modification improves engine performance at sea level, resulting in increases in thrust and specific impulse. Other than the alternate nozzle, the engine is essentially identical to the SSME.
+	
     tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts boldy LRB booster 35 atlas cass
 
     mass = 1.02
