--- a/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
@@ -32,7 +32,10 @@ PART
     title        = RM-25-150 'Ceraunius' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = Derived from the 'Cotopaxi', the 'Ceraunius' was developed for an allegedly rushed upper stage engine. 'Ceraunius' is just that engine. It is based on the venerable 'Cotopaxi' but uses a nozzle with a 150:1 expansion area ratio. Due to some technical heritage from the 'Cotopaxi', it needs to be kept cold if to restart it on-orbit, so it comes with an orbital variant painted white to reflect the heat. Also includes foil mounting options.  
-
+	real_title = RS-25-150
+	real_manufacturer = Rocketdyne
+	real_description = The SSME-50/150 concept replaces the standard SSME nozzle with a two-position retractable nozzle. The fixed portion of the nozzle has a 50:1 expansion area ratio and the retractable portion increases the area ratio to 150:1. The extension is retracted during low altitude operation and then extended once the vehicle reaches a sufficiently high altitude.
+	
     tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 orbital 150
 
     mass = 1.4
