--- a/GameData/RocketMotorMenagerie/Parts/rmm_ishtar.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_ishtar.cfg
@@ -31,7 +31,10 @@ PART
     title        = RM-25-50X 'Ishtar' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Ishtar' is a modified 'Cotopaxi' with a two-position retractable nozzle. It has a fixed nozzle with a 1:50 expansion area ratio and the retractable portion increases that expansion to 1:150. This makes it a fairly wacky engine, best suited for SSTO vehicles. #CD7600> AUTHOR'S NOTE: The engine can be used with its two position nozzle either retracted for optimal sea level performance or deployed for optimal altitude or vacuum performance. This switch can be made in flight using the mode switch via the right click part action window or an action group.</color>
-
+	real_title = RS-25-50-150
+	real_manufacturer = Rocketdyne
+	real_description = The SSME-50/150 concept replaces the standard SSME nozzle with a two-position retractable nozzle. The fixed portion of the nozzle has a 50:1 expansion area ratio and the retractable portion increases the area ratio to 150:1. The extension is retracted during low altitude operation and then extended once the vehicle reaches a sufficiently high altitude.
+	
     tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25  sts 50 ssto 150 rlv reusable cass
 
     mass = 1.43
