--- a/GameData/RocketMotorMenagerie/Parts/rmm_turiasaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_turiasaurus.cfg
@@ -31,6 +31,9 @@ PART
     title        = RM-13SE 'Turiasaurus' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Turiasaurus' is highly reliable, low cost booster engine that uses an innovative methalox split expander cycle. It is intended for use on reusable vehicles, but it's cheap enough that you can put it on an expendable vehicle as well.
+	real_title = Space Transportation Booster Engine
+	real_manufacturer = United Technologies, Pratt and Whitney Government Engine Business.
+	real_description = The STBE or Space Transportation Booster Engine, is a split expander cycle engine for the Advanced Launch System (ALS) and was at one point to be used for the Space Transportation System (STS,) ie the Space Shuttle, liquid booster program.  This is a methalox  engine meaning it uses liquid methane in conjunction with liquid oxygen for fuel.
 
     tags = propuls rocket methane methalox cryo als advanced rm? menagerie cassiopeia ?25 expander stbe booster
 
