--- a/GameData/RocketMotorMenagerie/Compatibility/WaterfallFX/rmm_waterfall_arenysaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Compatibility/WaterfallFX/rmm_waterfall_arenysaurus.cfg
@@ -98,7 +98,7 @@
 		overrideParentTransform = thrustTransform
 		position = 0,0,0
 		rotation = 0, 0, 0
-		scale = 0.88, 0.88, 1
+		scale = 0.79, 0.79, .9
  		}
 	}	
 }
