--- a/GameData/RocketMotorMenagerie/Parts/rmm_ishtar.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_ishtar.cfg
@@ -15,8 +15,8 @@ PART
 
     node_stack_top00 = 0.0, 1.15, 0.0, 0.0, 1.0, 0.0, 2
     node_stack_top01 = 0.0, 1.45, 0.0, 0.0, 1.0, 0.0, 2
-    node_stack_bottom = 0.0, -1.59, 0.0, 0.0, -1.0, 0.0, 2
-    node_attach = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
+    node_stack_bottom = 0.0, -1.34, 0.0, 0.0, -1.0, 0.0, 2
+    node_attach = 0.0, 1.15, 0.0, 0.0, 1.0, 0.0, 2
 
     bulkheadProfiles = size1p5, size1, size2
         
@@ -120,8 +120,8 @@ PART
     MODULE
 	{
 		name = ModuleMultiStateEngine
-		animationName = deploy-anim
-		EngineAnimationName = deploy-anim
+		animationName = deploy_anim
+		EngineAnimationName = deploy_anim
 		Layer = 1
 		SpeedMultiplier = 2.5
 		EngineIDAtTimeZero = ssme50_150_SL
@@ -266,7 +266,7 @@ PART
 				emission = 1.0 1.25
 				speed = 0.0 0.5
 				speed = 1.0 1.2
-                localScale = 1.328, 1.328, 1.328
+                localScale = 1.1952, 1.1952, 1.1952
 			}
 			MODEL_MULTI_PARTICLE
 			{
@@ -279,7 +279,7 @@ PART
 				emission = 1.0 1.25
 				speed = 0.0 0.5
 				speed = 1.0 1.2
-                localScale = 1.328, 1.328, 1.328
+                localScale = 1.1952, 1.1952, 1.1952
 			}
             PREFAB_PARTICLE
             {
@@ -320,7 +320,7 @@ PART
 				speed = 1.0 4.0
 				energy = 0.0 1.0
 				energy = 1.0 0.5
-				localScale = 3,3,3
+				localScale = 2.7, 2.7, 2.7
 				localPosition = 0,0,0.3
 			}
         }
