--- a/GameData/RocketMotorMenagerie/Compatibility/WaterfallFX/rmm_waterfall_kilimanjaro.cfg
+++ b/GameData/RocketMotorMenagerie/Compatibility/WaterfallFX/rmm_waterfall_kilimanjaro.cfg
@@ -98,7 +98,7 @@
 		overrideParentTransform = thrustTransform
 		position = 0,0,0
 		rotation = 0, 0, 0
-		scale = 0.75, 0.75, 1
+		scale = 0.675, 0.675, .9
  		}
 	}	
 }
