--- a/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
@@ -15,9 +15,8 @@ PART
 
     node_stack_top00 = 0.0, 1.15, 0.0, 0.0, 1.0, 0.0, 2
     node_stack_top01 = 0.0, 1.45, 0.0, 0.0, 1.0, 0.0, 2
-    node_stack_sts = 0.0, 0.263, 0.0, 0.0, 1.0, 0.0, 2
-    node_stack_bottom = 0.0, -2.38, 0.0, 0.0, -1.0, 0.0, 2
-    node_attach = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
+    node_stack_bottom = 0.0, -2.04, 0.0, 0.0, -1.0, 0.0, 2
+    node_attach = 0.0, 1.15, 0.0, 0.0, 1.0, 0.0, 2
 
     bulkheadProfiles = size1p5, size1, size2
         
@@ -218,7 +217,7 @@ PART
 				speed = 1.0 4.0
 				energy = 0.0 1.0
 				energy = 1.0 0.5
-				localScale = 3,3,3
+				localScale = 2.7, 2.7, 2.7
 				localPosition = 0,0,0.3
 			}
         }
@@ -378,19 +377,6 @@ PART
             node=top01
             node=bottom
             attachNode =  0.0, 1.45, 0.0, 0.0, 1.0, 0.0
-		}
-        SUBTYPE
-		{
-			name = STS Mount
-            primaryColor=#b0aeac
-			secondaryColor=#2b2b2b
-            transform = sts-mount
-            defaultSubtypePriority = 0
-            descriptionSummary = Shuttle Stack Mount
-            descriptionDetail = For attaching engines to the Space Transportation System Earth Orbit Shuttle.
-            node=sts
-            node=bottom
-            attachNode =  0.0, 0.263, 0.0, 0.0, 1.0, 0.0
 		}
 	}
     MODULE
