Fix Cotopaxi drag issues
- Disabled affectDragCubes & affectFARVoxels on both B9PS'

--- a/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
@@ -308,8 +308,8 @@ PART
 		moduleID = meshSwitch
 		switcherDescription = Engine Mount
 		switcherDescriptionPlural = Engine Mounts
-		affectDragCubes = True
-		affectFARVoxels = True
+		affectDragCubes = false
+		affectFARVoxels = false
 		SUBTYPE
 		{
 			name = Compact
@@ -395,6 +395,8 @@ PART
 		name = ModuleB9PartSwitch
 		switcherDescription = Engine Config
 		switcherDescriptionPlural = Engine Configs
+        affectDragCubes = false
+        affectFARVoxels = false
 		moduleID = engineSwitch
 	 	SUBTYPE
 		{
