B9 switcher drag fixes
Thank you, Sofie!

--- a/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
@@ -385,8 +385,8 @@ PART
 		moduleID = nozzleSwitch
 		switcherDescription = Engine Configuration
 		switcherDescriptionPlural = Engine Configurations
-		affectDragCubes = True
-		affectFARVoxels = True
+		affectDragCubes = false
+        affectFARVoxels = false
 		SUBTYPE
 		{
 			name = Altitude Start
