--- a/GameData/RocketMotorMenagerie/Parts/rmm_dugong.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_dugong.cfg
@@ -295,8 +295,8 @@ PART
 		moduleID = meshSwitch
 		switcherDescription = Engine Mount
 		switcherDescriptionPlural = Engine Mounts
-		affectDragCubes = True
-		affectFARVoxels = True
+		affectDragCubes = false
+        affectFARVoxels = false
 		SUBTYPE
 		{
 			name = Compact
