--- a/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
@@ -408,8 +408,8 @@ PART
 		moduleID = meshSwitch
 		switcherDescription = Engine Mount
 		switcherDescriptionPlural = Engine Mounts
-		affectDragCubes = True
-		affectFARVoxels = True
+		affectDragCubes = false
+        affectFARVoxels = false
 		SUBTYPE
 		{
 			name = 1.875m Mount
