--- a/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
@@ -306,9 +306,8 @@ PART
 		moduleID = meshSwitch
 		switcherDescription = Engine Mount
 		switcherDescriptionPlural = Engine Mounts
-		affectDragCubes = True
-		affectFARVoxels = True
-		SUBTYPE
+        affectDragCubes = false
+        affectFARVoxels = false		SUBTYPE
 		{
 			name = Compact
 			primaryColor=#707070
