--- a/GameData/RocketMotorMenagerie/Parts/rmm_osorno.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_osorno.cfg
@@ -303,8 +303,8 @@ PART
 		moduleID = meshSwitch
 		switcherDescription = Engine Mount
 		switcherDescriptionPlural = Engine Mounts
-		affectDragCubes = True
-		affectFARVoxels = True
+		affectDragCubes = false
+        affectFARVoxels = false
 		SUBTYPE
 		{
 			name = Compact
