--- a/GameData/RocketMotorMenagerie/Parts/rmm_turiasaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_turiasaurus.cfg
@@ -306,8 +306,8 @@ PART
 		moduleID = meshSwitch
 		switcherDescription = Engine Mount
 		switcherDescriptionPlural = Engine Mounts
-		affectDragCubes = True
-		affectFARVoxels = True
+		affectDragCubes = false
+        affectFARVoxels = false
 		SUBTYPE
 		{
 			name = Compact
