Potentially extrainious pull Request but new CFGs are based on lateest released RMM
Real Name addition to RMM based on current CFGs....

--- a/GameData/RocketMotorMenagerie/Parts/rmm_arsia.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_arsia.cfg
@@ -31,6 +31,9 @@ PART
     title        = RM-25-TDI 'Arsia' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Arsia' is really, really, REALLY big. After all, its got a 1:800 expansion ratio. Derived from the 'Cotopaxi', it was built for use on Duna Transfer Vehicles to for the Duna Transfer Injection burn.
+	real_title = RS-25-TMI SSME
+	real_manufacturer = Rocketdyne
+	real_description = The SSME-TMI is a engine derived from the SSME with a gigantic nozzle with a 1:800 expansion ratio that provides very high performance in vacuum. It was proposed for use as a Trans-Mars Injection engine and for use on upper stages to propel Mars-bound super heavy payloads. Much like the SSME-150, due to the thermal conditions on-orbit, the nozzle and LOX turbine and ducting need to painted with white thermal paint.
 
     tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 650 tmi
 
@@ -283,8 +286,8 @@ PART
 		moduleID = meshSwitch
 		switcherDescription = Engine Mount
 		switcherDescriptionPlural = Engine Mounts
-		affectDragCubes = false
-        affectFARVoxels = false
+		affectDragCubes = True
+		affectFARVoxels = True
 		SUBTYPE
 		{
 			name = Compact
