--- a/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
@@ -33,6 +33,10 @@ PART
     title        = RM-25-69 'Cotopaxi' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = After years of trials and tribulations, the 'Cotopaxi' is ready to fly as part of a grander vision to make space affordable and accessible, and power Kerbal Kind towards a future in the stars. Derived from previous work on hydrolox engines, this beast is a modern take on some of the most iconic powerhouses of space exploration. Combining efficient hydrolox fuels, a stellar gimbal range and advanced tooling and machinery, this powerful engine will have a place among the greats of rocketry.
+	real_title = RS-25-69 SSME
+	real_manufacturer = Rocketdyne, Turbopumps by Pratt & Whitney
+	real_description = After winning the competition to build the Space Shuttle Main Engine, the RS-25, Rocketdyne ran into technical issues with their design.  Rather than produce a less than ideal design, they purchased a new powerhead design from Pratt and Whitney that was optimized to work with the Rocketdyne combustion chamber.  The result was the RS-25 so called SSME with a 69:1 expansion ratio exhaust nozzle.
+	
 
     tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 69 cass SLS space launch system
 
@@ -308,8 +312,8 @@ PART
 		moduleID = meshSwitch
 		switcherDescription = Engine Mount
 		switcherDescriptionPlural = Engine Mounts
-		affectDragCubes = false
-		affectFARVoxels = false
+		affectDragCubes = True
+		affectFARVoxels = True
 		SUBTYPE
 		{
 			name = Compact
@@ -395,8 +399,6 @@ PART
 		name = ModuleB9PartSwitch
 		switcherDescription = Engine Config
 		switcherDescriptionPlural = Engine Configs
-        affectDragCubes = false
-        affectFARVoxels = false
 		moduleID = engineSwitch
 	 	SUBTYPE
 		{
