--- a/GameData/RocketMotorMenagerie/Parts/rmm_osorno.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_osorno.cfg
@@ -31,7 +31,10 @@ PART
     title        = RM-25-50 'Osorno' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Osorno', with its 50:1 expansion area ratio nozzle, occupies that space in between the 'Cotopaxi' and the 'Kilimanjaro'. It is a very versatile engine that can be used for a variety of first-stage applications.
-
+	real_title = RS-25-50 SSME
+	real_manufacturer = Rocketdyne
+	real_description = The SSME-50 is a modified SSME with a change from a standard area ratio to an area ratio of 50:1. This modification moderately improves engine performance at sea level, while not significantly hurting high-altitude performance. Other than the alternate nozzle, the engine is essentially identical to the SSME. It is a very versatile engine that can be used on wide variety of vehicles.
+	
     tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 50 cass
 
     mass = 1.09
@@ -303,8 +306,8 @@ PART
 		moduleID = meshSwitch
 		switcherDescription = Engine Mount
 		switcherDescriptionPlural = Engine Mounts
-		affectDragCubes = false
-        affectFARVoxels = false
+		affectDragCubes = True
+		affectFARVoxels = True
 		SUBTYPE
 		{
 			name = Compact
