--- a/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
@@ -33,6 +33,9 @@ PART
     title        = RM-122T 'Rainier' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = Based on heritage technologies from the venerable 'Cotopaxi', this powerful sustainer engine is designed for low cost and high reliability when used on a wide variety of launch vehicles. Cassiopeia Propulsion Systems is certain it has a bright future with many decades of use as it propels space exploration to reach new achievements. Comes with nozzle variants for better performance as a booster, sustainer, or high altitude engine.
+	real_title = STME Space Transportation Main Engine
+	real_manufacturer = Rocketdyne + Pratt & Whitney + Aerojet General in a consortium
+	real_description = The Space Transportation Main Engine (STME) is a gas-generator engine using LH2/LOX propellants and designed to be cheap, reliable, and versatile. It comes in three variants with different nozzles.  The 'common nozzle' is the basic configuration and can be used for a variety of vehicles. The 'core' variant is optimized for higher performance at higher altitudes as it is intended for use on the core stage of heavy left vehicles. The 'booster' variant is optimized for it's use on liquid rocket boosters, and as such has better performance at sea level. 
 
     tags = propuls rocket sustain hydrogen hydrolox cryo rainier 122T stme nls? transportation als? rm? menagerie cassiopeia flo sei comet
 
@@ -408,8 +411,8 @@ PART
 		moduleID = meshSwitch
 		switcherDescription = Engine Mount
 		switcherDescriptionPlural = Engine Mounts
-		affectDragCubes = false
-        affectFARVoxels = false
+		affectDragCubes = True
+		affectFARVoxels = True
 		SUBTYPE
 		{
 			name = 1.875m Mount
