--- a/RMM_Extras (No Warranty)/RS800K/rmm_wakulla.cfg
+++ b/RMM_Extras (No Warranty)/RS800K/rmm_wakulla.cfg
@@ -31,6 +31,9 @@ PART
     title        = RM-800K 'Wakulla' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = Designed as a upgrade for super heavy launch vehicles vehicles based on the Daleth-IV, the 'Wakulla' packs quite a punch. We know it may bear a passing resemblance to the 'Rainier', but we are completely sure that it is a different engine.
+	real_title = RS-800
+	real_manufacturer =Boeing Rocketdyne Propulsion and Power.
+	real_description = Developed as a higher thrust ‘drop in’ replacement for the RS-68 for an evolved Delta IV rocket, the RS-800 is likewise a Liquid Hydrogen and Oxygen burning engine.  The RS-800s improved performance means Delta IVs can be viable as launch platforms far into the future.
 
     tags = propuls rocket sustain hydrogen hydrolox cryo wakulla 800K rs rs-800K delta daleth IV four delta? rm? menagerie cassiopeia shlv super heavy hlv
 
