--- a/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
@@ -31,6 +31,10 @@ PART
     title        = RM-4LR-35 'Arenysaurus' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Arenysaurus' is what you need for boosters that need something even more powerful than the 'Kilimanjaro'. Utilizing methalox propellants and a 35:1 expansion nozzle, this engine is well-suited for liquid rocket boosters that need a great balance of high thrust and high ISP.
+	real_title = RS25-35CH4 LRBE Liquid Rocket Booster Engine
+	real_manufacturer = Rocketdyne
+	real_description = The LRBE is a SSME modified to operate with methane as the fuel and coolant. Since this concept is for a booster application, the 35:l expansion area ratio nozzle is incorporated into the design. These changes substantially improves thrust, both at sea level and in vacuum while specific impulse is lower than the SSME due to the change in fuel type.
+
 
     tags = propuls rocket booster methane methalox cryo rs25 ssme lrbe transportation rm? menagerie cassiopeia ?25 shuttle sts boldy LRB booster 35 lrbe cass
 
@@ -306,8 +310,9 @@ PART
 		moduleID = meshSwitch
 		switcherDescription = Engine Mount
 		switcherDescriptionPlural = Engine Mounts
-        affectDragCubes = false
-        affectFARVoxels = false		SUBTYPE
+		affectDragCubes = True
+		affectFARVoxels = True
+		SUBTYPE
 		{
 			name = Compact
 			primaryColor=#707070
